--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     },  
     
     "STICKER_NAME": {
-      "description": ANYMOUS ",
+      "description": " ANYMOUS ",
       "required": false,
       "value": "03134158840"
     }, 
