--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=tERSmSaL#6PdRlfvboDE7PBVe7KiV7AXT5nFdESmfzIwG3M5J2ik",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=FY5g3ShD#DWFbgvMzW3ptgoLrxPPZ5VNUgvqhuuOwz20FiBk2eiU",
       "required": true
     }
 },
