--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=MVYX3J6C#smgUAHl8CL1decaSo4QyxWyissJeFBs9E7L3c6K8blg",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=260257fc5f1ba19f",
       "required": true
     }
 },
